care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/Xmas_CAREgifts_Response_2021__c.object-meta.xml
<CustomObject>
    <label>Xmas_CAREgifts_Response_2021</label>
    <nameField>
        <label>Xmas_CAREgifts_Response_2021</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xmas_CAREgifts_Response_2021</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>