care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/fields/Not_Respond__c.field-meta.xml
<CustomField>
    <fullName>Not_Respond__c</fullName>
    <label>Not_Respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>