care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/fields/NotRespond__c.field-meta.xml
<CustomField>
    <fullName>NotRespond__c</fullName>
    <label>%NotRespond</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>