care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/fields/Respond__c.field-meta.xml
<CustomField>
    <fullName>Respond__c</fullName>
    <label>%Respond</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>