care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <label>Responded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>