care-australia-uat/force-app/main/default/objects/Xmas_CAREgifts_Response_2021__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Responded__c</columns>
    <columns>Not_Respond__c</columns>
    <columns>Total__c</columns>
    <columns>Respond__c</columns>
    <columns>NotRespond__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>